Paper efficacy numbers correction

--- a/results/herald-2020-08-31.md
+++ b/results/herald-2020-08-31.md
@@ -13,9 +13,22 @@ menubar: efficacy_menu
 A formal test on 10 phones (5 iOS, 5 Android) carried out on 31st August 2020
 by Adam Fowler of the Herald Protocol evelopment team.
 
+## Correction - 2020-11-07
+
+After reviewing the fair efficacy paper it was found that the UK population with
+mobile phones was double counted for some age groups. This has now been corrected
+in the below statistics and the paper.
+
+This resulted in the Pcountry value for the UK changing. This doesn't affect
+the probability of accurate risk detection but does effect the final
+Pspec and efficacy scores. The values that have changed are marked with an
+asterisk below.
+
+## Results
+
 |Measure|Result|Notes|
 |---|---|---|
-|Overall Efficacy|<b>63.46%</b>|<b>Very effective</b><br>(UK MAX 76.39%)|
+|Overall Efficacy|<b>37.93%*</b>|<b>Effective</b><br>(UK MAX 46.57%*)|
 |<i>Probability of detection</i>|86.51%|Formal RISK detection|
 |Phone Detection|100%|Includes iOS in the background|
 |Continuity|93.06%|Full continuity|
@@ -26,8 +39,8 @@ by Adam Fowler of the Herald Protocol evelopment team.
 |Longevity|98.50%|11 hour test|
 |Mean time<br>between readings|6.98s||
 |Country|UK||
-|Have BLE Phones|94.49%|OFCOM reports|
-|Hardware Support|97.50%|BBC data|
+|Have BLE Phones|72.53%*|OFCOM reports|
+|Hardware Support|98.19*%|BBC data|
 |Software/OS Support|98.00%|BBC data|
-|Overall Pspec|90.29%||
-|<i>Pspec squared</i>|81.51%||
+|Overall Pspec|69.79%*||
+|<i>Pspec squared</i>|48.71%*||
