Fixes #13 #11. Updated website for v1.1 release
Updated website for v1.1 release
- Changed license to CC-BY
- Added latest v1.1 performance results
- Added blog release post
- Typo fixes
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/_posts/2020-10-30-website.md
+++ b/_posts/2020-10-30-website.md
@@ -9,7 +9,7 @@ author_avatar: https://avatars2.githubusercontent.com/u/2700521?s=150&u=7998edea
 ---
 
 Quite a few things have happened in the first month since Herald was published as Open Source Software
-under the MIT license.
+under the MIT license. [29 Nov 2020 NOTE: Code now under the Apache-2.0 license]
 
 The most visible change is this website. A new theme based on our new project logo:-
 
