--- a/results/herald-2020-08-31.md
+++ b/results/herald-2020-08-31.md
@@ -11,7 +11,7 @@ menubar: efficacy_menu
 # 2020-08-31
 
 A formal test on 10 phones (5 iOS, 5 Android) carried out on 31st August 2020
-by Adam Fowler of the Herald Protocol evelopment team.
+by Adam Fowler of the Herald Protocol development team.
 
 ## Correction - 2020-11-07
 
