Fixes #5. Added herald stats to website
Related to #14
Added background stats
- BLE support for all protocols
- Herald specific summary stats
- Links to sources
- Made stats on website consistent, and linked to stats page for sources
- Added summary charts and data for latest Herald formal tests
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/results/herald-2020-11-28.md
+++ b/results/herald-2020-11-28.md
@@ -1,7 +1,4 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
 layout: page
 title: Herald App (Herald Protocol) Results 2020-11-28
 description: Herald App Formal Tests
@@ -33,6 +30,8 @@ Completeness has not been recalculated, but is too likely to be higher.
 We have used the current known value for this until a full 10 device
 test can be ran.
 
+**Updated 1 Dec 2020**: Added results breakdown and images, below.
+
 ## Results
 
 |Measure|Result|Notes|
@@ -53,3 +52,34 @@ test can be ran.
 |Software/OS Support|98.00%|BBC data|
 |Overall Pspec|69.79%||
 |<i>Pspec squared</i>|48.71%||
+
+## Phones tested
+
+|PhoneId|Phone Make and Model|OS and version|Known issues|
+|---|---|---|---|
+|1|Samsung A10 (SM-A105FN)|Android 28|A10s knowingly rotate their BLE MAC address with every request. Herald uses an ephemeral ID that rotates every 15 minutes as a performance improvement|
+|2|Samsung A20 (SM-A202F)|Android 29|Same issue as A10, above|
+|3|iPhone 6S|iOS 12.1.4|(phone name is Denmark)|
+|4|iPhone 6+|iOS 12.4.5|(phone name is Netherlands)|
+
+## Fair Efficacy Stats Summary
+
+|Phones|Max Pairs|Pairs Detected|Detection Percent|Max 30 second windows|30 second windows achieved|Missed windows percentage|Longevity change over 8 hours|
+|4|12|12|100%|11520|11519|0.00868055555555136%|0%|
+
+## Phone detection and distance estimation reports
+
+The below 4 charts show discoveries, ID (data payload) reads, and RSSI (distance estimation) readings as individual dots.
+
+![A10 results](./A10-report.png)
+![A20 results](./A20-report.png)
+![iPhone 6S results](./Denmark-report.png)
+![iPhone 6+ results](./Netherlands-report.png)
+
+The below chart shows RSSI variation over time. In a formal 8 hour test these will mostly be static.
+
+![A10 RSSI](./A10-accuracy.png)
+![A20 RSSI](./A20-accuracy.png)
+![iPhone 6S RSSI](./Denmark-accuracy.png)
+![iPhone 6+ RSSI](./Netherlands-accuracy.png)
+
