--- a/results/herald-2020-11-28.md
+++ b/results/herald-2020-11-28.md
@@ -71,15 +71,15 @@ test can be ran.
 
 The below 4 charts show discoveries, ID (data payload) reads, and RSSI (distance estimation) readings as individual dots.
 
-![A10 results](./A10-report.png)
-![A20 results](./A20-report.png)
-![iPhone 6S results](./Denmark-report.png)
-![iPhone 6+ results](./Netherlands-report.png)
+![A10 results](./herald-2020-11-28/A10-report.png)
+![A20 results](./herald-2020-11-28/A20-report.png)
+![iPhone 6S results](./herald-2020-11-28/Denmark-report.png)
+![iPhone 6+ results](./herald-2020-11-28/Netherlands-report.png)
 
 The below chart shows RSSI variation over time. In a formal 8 hour test these will mostly be static.
 
-![A10 RSSI](./A10-accuracy.png)
-![A20 RSSI](./A20-accuracy.png)
-![iPhone 6S RSSI](./Denmark-accuracy.png)
-![iPhone 6+ RSSI](./Netherlands-accuracy.png)
+![A10 RSSI](./herald-2020-11-28/A10-accuracy.png)
+![A20 RSSI](./herald-2020-11-28/A20-accuracy.png)
+![iPhone 6S RSSI](./herald-2020-11-28/Denmark-accuracy.png)
+![iPhone 6+ RSSI](./herald-2020-11-28/Netherlands-accuracy.png)
 
