Added battery chart on 2020-11-28 results
Signed-off-by: c19x <support@c19x.org>

--- a/results/herald-2020-11-28.md
+++ b/results/herald-2020-11-28.md
@@ -32,6 +32,8 @@ test can be ran.
 
 **Updated 1 Dec 2020**: Added results breakdown and images, below.
 
+**Updated 11 Jan 2021**: Added battery level image, below.
+
 ## Results
 
 |Measure|Result|Notes|
@@ -83,3 +85,6 @@ The below chart shows RSSI variation over time. In a formal 8 hour test these wi
 ![iPhone 6S RSSI](./herald-2020-11-28/Denmark-accuracy.png)
 ![iPhone 6+ RSSI](./herald-2020-11-28/Netherlands-accuracy.png)
 
+The below chart shows battery charge remaining over time.
+
+![Battery Level](./herald-2020-11-28/battery.png)
