New website home URLs working
Signed-off-by: Adam Fowler <adamfowleruk@gmail.com>

--- a/_posts/2020-10-30-website.md
+++ b/_posts/2020-10-30-website.md
@@ -22,10 +22,10 @@ optional callback surfaces this to the remote application.
 
 Also added are two new communication channels: Slack and Twitter.
 
-Our twitter handle is <a href="https://twitter.com/HeraldBluetooth" target="_new">@HeraldBluetooth</a> (there's a link in the footer of our website.).
+Our twitter handle is <a href="https://twitter.com/HeraldProximity" target="_new">@HeraldBluetooth</a> (there's a link in the footer of our website.).
 
-We have our own Slack instance too to allow for protocol collaboration and joint research. This is available at 
-<a href="https://herald-bluetooth.slack.com/" target="_new">https://herald-bluetooth.slack.com/</a>
+We have channels named herald-* in LFPH's Slack instance too to allow for protocol collaboration and joint research. This is available at 
+<a href="https://slack.lfph.io/" target="_new">https://slack.lfph.io/</a>
 
 Please join in with the development of Herald. We're planning our next 
 formal release and so welcome any and all feedback you have.
